# concorde-policy-mapper

./: CHANGELOG.md  CLAUDE.md  README.md  justfile  pyproject.toml  run_extract_battery.py
.claude/: settings.json
.claude/hooks/: block-destructive.sh  check-changelog.sh  format-python.sh
.github/workflows/: ci.yml  codeql.yaml
batteries/: risk-selected.yaml
data/: atlas_risk_to_actions.yaml  mit_ai_risk_mitigation_to_atlas_data.yaml  mitigation_categories.yaml
evals/ground_truth/: amadeus.yaml  ars.yaml  aus-gov.yaml  camden-borough-work.yaml  cisco-supplier.yaml  dhs-gov.yaml  ebay.yaml  eu-com.yaml  firstsource.yaml  fs-isac.yaml  gray.yaml  guy-nhs.yaml  icrc.yaml  leicestershire_police.yaml  lenovo.yaml  llvm.yaml  lse-legreg.yaml  lse-marking.yaml  new-york-state.yaml  npcc.yaml  ovic.yaml  penn.yaml  prosus.yaml  rdash-nhs.yaml  sap.yaml  st-johns.yaml  vps.yaml
experiments/: EXPERIMENT_LOG.md  README.md  expansion_fp_review.html  expansion_fp_review_data.json
scripts/: build_mitigation_index.py  match_air_to_atlas.py
tests/: conftest.py  test_debug.py  test_dspy_embedding_dataset.py  test_dspy_embedding_metric.py  test_eval.py  test_eval_cli.py  test_extract_attribute.py  test_extract_cli.py  test_extract_expand.py  test_extract_index.py  test_extract_merge.py  test_extract_models.py  test_extract_parse.py  test_extract_pipeline.py  test_extract_querygen.py  test_extract_report.py  test_extract_retrieve.py  test_extract_variant_grounding.py  test_index_instruction.py  test_llm.py  test_mitigations.py  test_tracking.py
(+78 files in other folders)
